<resources>
    <string name="app_name">Digital Counter</string>
    <string name="count">COUNT</string>

    <string name="default_title">Default</string>
    <string name="settings">Settings</string>
    <string name="target_string">Target: </string>
    <string name="Light">Night mode</string>
    <string name="edit">Edit Count</string>
    <string name="alarm">Set Alarm</string>
    <string name="reset">Reset</string>
    <string name="set">Set</string>
    <string name="remove">Remove</string>
    <string name="cancel">Cancel</string>
    <string name="sound_mute">Mute it</string>
    <string name="sound_um">Unmute it</string>
    <string name="background">set background</string>
    <string name="setLanguage">Set Language</string>
    <string name="save">save</string>
    <string name="open">Count List</string>
    <string name="login">Login</string>
    <!-- <string name="reset_app">RESET WHOLE APP</string>-->
    <string name="logout">LogOut</string>
    <string name="profile">profile</string>
    <string name="add">Add</string>
    <string name="group_count">GroupCount</string>
    <string name="menu">MenuBar</string>
    <string name="email">Email: </string>
    <string name="add_member">Add Member: </string>
    <string name="gCount">Group Count </string>
    <string name="gname">Group Name</string>
    <string name="gTarget">Group Target</string>
    <string name="gCreate">Create Group</string>
    <string name="mGroup">My Group Info</string>
    <string name="del_member">delete member</string>
    <string name="groupmember">GroupMember: </string>
    <string name="totalcount">Total Uploaded Count: </string>
    <string name="my_count">My Count: </string>
    <string name="grouptarget">GroupTarget: </string>
    <string name="groupname">GroupName: </string>
    <string name="date_today">Date Today: </string>
    <string name="group_create">Create Group </string>


</resources>
