<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".KhotomAccount"
    android:background="@drawable/pic2"
    android:orientation="vertical">

    <TextView
        android:gravity="center"
        android:text="@string/gCount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        />

    <EditText
        android:id="@+id/edit_text1"
        android:hint="@string/gname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        />

    <EditText
        android:id="@+id/edit_text2"
        android:hint="@string/gTarget"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gCreate"
        android:onClick="add_k_name"
        tools:ignore="OnClick" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mGroup"
        android:onClick="goGroup"
        tools:ignore="OnClick" />

            <EditText
                android:id="@+id/edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_member"
                android:onClick="addItemToList"
                tools:ignore="OnClick" />
<!--    <Button-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/del_member"-->
<!--        android:onClick="delItemfromList"-->
<!--        tools:ignore="OnClick" />-->

</LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/khatamList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</LinearLayout>